home overflow fixed

--- a/app/assets/stylesheets/components/_testimonials.scss
+++ b/app/assets/stylesheets/components/_testimonials.scss
@@ -1,7 +1,6 @@
 .bg-testimonials {
   background-color: $blue;
   height: 88vh;
-  width: 100vw;
   margin:0;
 }
 
